# ciris-1986ve1t-test

./: .clang-format  .gitignore  flake.nix  meson.build  readme.md
extra/: 1986ve1t.cfg  1986ve1t.cross  1986ve1t.ld
extra/scripts/: walker.py
firmware/: meson.build
firmware/include/: config.h
firmware/include/drv/: clock.h  lcd.h  terminal.h  udpsrv.h
firmware/include/drv/udpsrv/: arp.h  arptable.h  dhcp.h  dynip.h  frames.h  utils.h
firmware/include/font/: 6x8.h
firmware/include/mod/: asm.h  clk.h  eth.h  extbus.h  nvic.h  port.h  regs.h  reset.h  timer.h  watchdog.h
firmware/include/mod/scb/: systick.h
firmware/include/utils/: bits.h
firmware/src/: main.c  startup.c  startup.s
firmware/src/drv/: clock.c  lcd.c  terminal.c  udpsrv.c
firmware/src/drv/udpsrv/: arp.c  arptable.c  dhcp.c  dynip.c  frames.c  utils.c
firmware/src/font/: 6x8.c
firmware/src/mod/: clk.c  eth.c  extbus.c  nvic.c  port.c  reset.c  timer.c  watchdog.c
firmware/src/mod/scb/: systick.c
